@@ -1,3 +1,0 @@
-@comment $NetBSD: PLIST,v 1.2 2007/12/03 19:33:14 xtraeme Exp $
-lib/xorg/modules/drivers/radeonhd_drv.la
-man/man4/radeonhd.4
